version/stable/_sources/api/ansys/mechanical/stubs/v252/Ansys/ACT/Mechanical/Application/SolveProcessSettings/SolveConfiguration.rst.txt
.. vale off



:class:`SolveConfiguration`
===========================

.. py:class:: ansys.mechanical.stubs.v252.Ansys.ACT.Mechanical.Application.SolveProcessSettings.SolveConfiguration(name: str)

   Bases: :py:obj:`object`


   
   The class representing a solve configuration.
















   ..
       !! processed by numpydoc !!


.. py:currentmodule:: SolveConfiguration

Overview
--------

.. tab-set::



   .. tab-item:: Methods

      .. list-table::
          :header-rows: 0
          :widths: auto

          * - :py:attr:`~CopyTo`
            - CopyTo method.
          * - :py:attr:`~Equals`
            - Equals method.
          * - :py:attr:`~GetHashCode`
            - GetHashCode method.
          * - :py:attr:`~GetType`
            - GetType method.
          * - :py:attr:`~SetAsDefault`
            - Sets this solve configuration as the default.
          * - :py:attr:`~ToString`
            - ToString method.


   .. tab-item:: Properties

      .. list-table::
          :header-rows: 0
          :widths: auto

          * - :py:attr:`~Default`
            - Whether this solve configuration is the default.
          * - :py:attr:`~Name`
            - The name of the solve configuration.
          * - :py:attr:`~Settings`
            - Returns the queue settings of this solve configuration.
          * - :py:attr:`~SolveProcessSettings`
            - Returns the solve process settings of this solve configuration.







Property detail
---------------
.. py:property:: Default
   :type: Optional[bool]


   
   Whether this solve configuration is the default.
















   ..
       !! processed by numpydoc !!

.. py:property:: Name
   :type: Optional[str]


   
   The name of the solve configuration.
















   ..
       !! processed by numpydoc !!

.. py:property:: Settings
   :type: Optional[Ansys.ACT.Mechanical.Application.SolveProcessSettings.QueueSettings]


   
   Returns the queue settings of this solve configuration.
















   ..
       !! processed by numpydoc !!

.. py:property:: SolveProcessSettings
   :type: Optional[Ansys.ACT.Mechanical.Application.SolveProcessSettings.SolveProcessSettings]


   
   Returns the solve process settings of this solve configuration.
















   ..
       !! processed by numpydoc !!





Method detail
-------------
.. py:method:: CopyTo(other: Ansys.ACT.Mechanical.Application.SolveProcessSettings.ISolveConfiguration) -> None

   
   CopyTo method.

   ..
       !! processed by numpydoc !!

.. py:method:: Equals(other: Ansys.ACT.Mechanical.Application.SolveProcessSettings.SolveConfiguration) -> bool

   
   Equals method.

   ..
       !! processed by numpydoc !!

.. py:method:: GetHashCode() -> int

   
   GetHashCode method.

   ..
       !! processed by numpydoc !!

.. py:method:: GetType() -> type

   
   GetType method.

   ..
       !! processed by numpydoc !!

.. py:method:: SetAsDefault() -> None

   
   Sets this solve configuration as the default.

   ..
       !! processed by numpydoc !!

.. py:method:: ToString() -> str

   
   ToString method.

   ..
       !! processed by numpydoc !!



.. vale on